// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expand menu 1`] = `
<div>
  <div
    class="layout"
  >
    <nav
      aria-label="primary"
      class="expanded"
    >
      <button
        aria-label="expand navigation"
        class="expand_button"
      >
        <svg
          height="40"
          viewBox="0 0 100 80"
          width="40"
        >
          <rect
            height="20"
            width="100"
          />
          <rect
            height="20"
            width="100"
            y="30"
          />
          <rect
            height="20"
            width="100"
            y="60"
          />
        </svg>
      </button>
      <ul>
        <li
          aria-label="navigate to home"
          class="logo"
        >
          <a>
            jax reiff
          </a>
        </li>
        <li
          aria-label="navigate to projects"
          class="navlink"
        >
          <a>
            projects
          </a>
        </li>
        <li
          aria-label="navigate to photos"
          class="navlink"
        >
          <a>
            photos
          </a>
        </li>
        <li
          aria-label="navigate to posts"
          class="navlink"
        >
          <a>
            posts
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</div>
`;

exports[`should render 1`] = `
<div>
  <div
    class="layout"
  >
    <nav
      aria-label="primary"
      class=""
    >
      <button
        aria-label="expand navigation"
        class="expand_button"
      >
        <svg
          height="40"
          viewBox="0 0 100 80"
          width="40"
        >
          <rect
            height="20"
            width="100"
          />
          <rect
            height="20"
            width="100"
            y="30"
          />
          <rect
            height="20"
            width="100"
            y="60"
          />
        </svg>
      </button>
      <ul>
        <li
          aria-label="navigate to home"
          class="logo"
        >
          <a>
            jax reiff
          </a>
        </li>
        <li
          aria-label="navigate to projects"
          class="navlink"
        >
          <a>
            projects
          </a>
        </li>
        <li
          aria-label="navigate to photos"
          class="navlink"
        >
          <a>
            photos
          </a>
        </li>
        <li
          aria-label="navigate to posts"
          class="navlink"
        >
          <a>
            posts
          </a>
        </li>
      </ul>
    </nav>
    <main />
  </div>
</div>
`;
